add funding links

--- a/news.html
+++ b/news.html
@@ -44,7 +44,10 @@
 						</div>
 					</h2>
 					<p class="lead mt-4">
-						While at CFDRC's Computational Medicine and Biology (CMB) division, we were awarded a Chemical and Biological Defense (CBD) SBIR Phase II project to quickly, accurately and automatically perform respirator mask sizing and predict protective fit using only 2D images captured on smartphone cameras, thereby replacing the lengthy physical testing procedures and can even be performed in the field when needed. In Phase I, personalized 3D facial surfaces are generated through shape reconstruction in real-time from captured 2D images. Common facial anthropometric measurements are automatically extracted from the mesh and are then used to predict respirator mask size according to National Institute for Occupational Safety and Health (NIOSH) respirator test fit panels. Preliminary validation showed 5.1% facial anthropometric feature prediction error. Phase II will involve the development of individualized respiration models to simulate the movement of air and particulates through the mask and into the lungs in order to predict quantitative fit factor. Further validation studies will also be performed to ensure the accuracy of the app predictions. 
+						While at CFDRC's Computational Medicine and Biology (CMB) division, we were awarded a Chemical and Biological Defense (CBD) SBIR Phase II project to quickly, accurately and automatically perform respirator mask sizing and predict protective fit using only 2D images captured on smartphone cameras, thereby replacing the lengthy physical testing procedures and can even be performed in the field when needed. In Phase I, personalized 3D facial surfaces are generated through shape reconstruction in real-time from captured 2D images. Common facial anthropometric measurements are automatically extracted from the mesh and are then used to predict respirator mask size according to National Institute for Occupational Safety and Health (NIOSH) respirator test fit panels. Preliminary validation showed 5.1% facial anthropometric feature prediction error. Phase II will involve the development of individualized respiration models to simulate the movement of air and particulates through the mask and into the lungs in order to predict quantitative fit factor. Further validation studies will also be performed to ensure the accuracy of the app predictions.
+					</p>
+					<p class="lead mt-4">
+						<a href="https://www.sbir.gov/node/1609089" target="_blank"> SBIR CBD161-005 Phase II</a>
 					</p>
 				</li>
 			</ul>	
@@ -65,6 +68,9 @@
 					<p class="lead mt-4">
 						While at CFDRC's Computational Medicine and Biology (CMB) division, we were awarded an Army SBIR Phase II project to develop a burn injury assessment tool with morphable 3D anthropometric human body models in order to improve the accuracy of percentage burn surface area estimates. This is a continuation of the work performed in Phase I where a functional prototype tool was created for real-time generation of an anthropometric 3D virtual human body with graphical annotations of burn areas and severity as well as assessment of percentage of total body surface area (%TBSA). For Phase II, the capabilities of the prototype will be expanded to develop a comprehensive tool. New functionalities will include a database to retrieve stored patient and burn information, addition of child model, full body model articulations for independent body parts scaling, and a specialized interfa ce for the hands given their high burn incidences. To further aid in image-assisted burn demarcation, a photograph acquisition guide for direct alignment with the 3D model on the mobile version of our tool will be developed along with infrared thermal image processing to estimate burn depth.
 					</p>
+					<p class="lead mt-4">
+						<a href="https://www.sbir.gov/node/1485493" target="_blank"> SBIR A15-055 Phase II</a>
+					</p>
 				</li>
 			</ul>	
 		</div>
@@ -83,6 +89,9 @@
 					</h2>
 					<p class="lead mt-4">
 						While at CFDRC's Computational Medicine and Biology (CMB) division, we were awarded a Chemical and Biological Defense (CBD) SBIR Phase I project to quickly, accurately and automatically perform respiratory mask sizing and predict protective fit using only 2D images captured on smartphone cameras, thereby replacing the lengthy physical testing procedures and can even be performed in the field when needed.
+					</p>
+					<p class="lead mt-4">
+						<a href="https://www.sbir.gov/node/1244297" target="_blank"> SBIR CBD161-005 Phase I</a>
 					</p>
 				</li>
 			</ul>	
@@ -103,6 +112,9 @@
 					<p class="lead mt-4">
 						While at CFDRC's Computational Medicine and Biology (CMB) division, we were awarded an Army SBIR Phase I project to develop a burn injury assessment tool with morphable 3D anthropometric human body models in order to improve the accuracy of percentage burn surface area estimates. A functional prototype tool will be created for real-time generation of an anthropometric 3D virtual human body with graphical annotations of burn areas and severity as well as assessment of percentage of total body surface area (%TBSA).
 					</p>
+					<p class="lead mt-4">
+						<a href="https://www.sbir.gov/node/872895" target="_blank"> SBIR A15-055 Phase I</a>
+					</p>
 				</li>
 			</ul>	
 		</div>
@@ -121,6 +133,9 @@
 					</h2>
 					<p class="lead mt-4">
 						While at CFDRC's Computational Medicine and Biology (CMB) division, we were awarded a 3 year Cooperative Agreement project (U01) with the U.S. Food and Drug Administration (FDA) to develop a multiscale-multiphysics modeling and simulation software tool for ocular drug delivery.
+					</p>
+					<p class="lead mt-4">
+						<a href="https://grantome.com/grant/NIH/U01-FD005219-01" target="_blank"> FDA 1U01FD005219-01</a>
 					</p>
 				</li>
 			</ul>	
