--- a/praesus.html
+++ b/praesus.html
@@ -66,6 +66,12 @@
 		<div class="container-narrow">		
 
 			<div class="row mt-6">
+				<p class="lead mt-4">
+					This project was funded by <a href="https://www.sbir.gov/node/1244297" target="_blank"> SBIR CBD161-005 Phase I</a>.
+				</p>
+			</div>
+
+			<div class="row mt-6">
 				<p class="lead text-center">
 					<a href="contact.html">Contact us</a>
 					for more information and to download a copy of Praesus.
