--- a/rivus.html
+++ b/rivus.html
@@ -91,6 +91,11 @@
 
 				</div>
 			</div>
+			<div class="row mt-6">
+				<p class="lead mt-4">
+					This project was funded by <a href="https://www.sbir.gov/node/872895" target="_blank"> SBIR A15-055 Phase I</a>.
+				</p>
+			</div>
 
 			<div class="row mt-6">
 				<p class="lead text-center">
