--- a/ocellus.html
+++ b/ocellus.html
@@ -95,6 +95,11 @@
 			</div>
 
 			<div class="row mt-6">
+				<p class="lead mt-4">
+					This project was funded by <a href="https://grantome.com/grant/NIH/U01-FD005219-01" target="_blank"> FDA 1U01FD005219-01</a>.
+				</p>
+			</div>
+			<div class="row mt-6">
 				<p class="lead text-center">
 					<a href="contact.html">Contact us</a>
 					for more information and to download a copy of Ocellus.
