fix text alignment

--- a/ocellus.html
+++ b/ocellus.html
@@ -95,7 +95,7 @@
 			</div>
 
 			<div class="row mt-6">
-				<p class="lead mt-4">
+				<p class="lead text-center">
 					This project was funded by <a href="https://grantome.com/grant/NIH/U01-FD005219-01" target="_blank"> FDA 1U01FD005219-01</a>.
 				</p>
 			</div>
