--- a/rivus.html
+++ b/rivus.html
@@ -91,8 +91,8 @@
 
 				</div>
 			</div>
-			<div class="row mt-6">
-				<p class="lead mt-4">
+			<div class="row mt-6 text-center">
+				<p class="lead text-center">
 					This project was funded by <a href="https://www.sbir.gov/node/872895" target="_blank"> SBIR A15-055 Phase I</a>.
 				</p>
 			</div>
