--- a/praesus.html
+++ b/praesus.html
@@ -66,7 +66,7 @@
 		<div class="container-narrow">		
 
 			<div class="row mt-6">
-				<p class="lead mt-4">
+				<p class="lead text-center">
 					This project was funded by <a href="https://www.sbir.gov/node/1244297" target="_blank"> SBIR CBD161-005 Phase I</a>.
 				</p>
 			</div>
