--- a/index.html
+++ b/index.html
@@ -177,6 +177,17 @@
 					<img class="img-partner" src="images/cbd_logo.png" alt="cbd">
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-xs-12 col-sm-4">
+					<img class="img-partner" src="images/Philips_logo_new.png" alt="fda" height="200px">
+				</div>
+				<div class="col-xs-12 col-sm-4">
+					<img class="img-partner" src="images/healthmyne_400x400.png" alt="fda" height="200px">
+				</div>
+				<div class="col-xs-12 col-sm-4">
+					<!-- <img class="img-partner" src="images/Avanos_Logo.png" alt="fda" width="200px"> -->
+				</div>
+			</div>
 		</div>
 
 	</section>
