add publications, patents, ATL image

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 
 	<div class="jumbotron-contact text-center">
 		<div class="container">
-			<img class="home-illu" src="images/madisonWI.png" alt="MadisonWI">
+			<img class="home-illu" src="images/Atlanta_Skyline_-_Illustration.jpg" alt="AtlantaGA">
 		</div>
 	</div>
 
