--- a/ocellus.html
+++ b/ocellus.html
@@ -95,10 +95,25 @@
 			</div>
 
 			<div class="row mt-6">
-				<p class="lead text-center">
+				<h1 class="text-left">Publications</h1>
+			</div>
+			<div class="row">
+				<p class="lead">
+					<a href="https://pubmed.ncbi.nlm.nih.gov/29175100/" target="_blank"> Pak, J., Chen, Z., Sun, K., et.al. 
+						“Computational Modeling of Drug Transport Across the In Vitro Cornea.” 
+						Computers in Biology and Medicine, 2018 vol 92(1); 139-146
+					</a>
+				</p>
+			</div>
+			<div class="row mt-6">
+				<h1 class="text-left">Funding</h1>
+			</div>
+			<div class="row">
+				<p class="lead">
 					This project was funded by <a href="https://grantome.com/grant/NIH/U01-FD005219-01" target="_blank"> FDA 1U01FD005219-01</a>.
 				</p>
 			</div>
+
 			<div class="row mt-6">
 				<p class="lead text-center">
 					<a href="contact.html">Contact us</a>
