--- a/rivus.html
+++ b/rivus.html
@@ -91,10 +91,32 @@
 
 				</div>
 			</div>
-			<div class="row mt-6 text-center">
-				<p class="lead text-center">
-					This project was funded by <a href="https://www.sbir.gov/node/872895" target="_blank"> SBIR A15-055 Phase I</a>.
-				</p>
+			<div class="row mt-6">
+				<div class="col-xs-12 col-sm-3">
+					<h1 class="text-center">Publications</h1>
+				</div>
+				<div class="col-xs-12 col-sm-9">
+					<p class="lead">
+						Sun, K., Rossi, M., Zhou, X., et al. 
+						“Burn Injury Assessment Tool with Morphable 3D Human Body Models” 
+						Transactions of MHSRS: Military Health System Research Symposium, 
+						August 15th – 18th 2016, Orlando, FL
+					</p>
+					<br>
+					<p class="lead">
+						<a href="https://archive.org/details/DTIC_AD1032948" target="_blank"> SBIR A15-055 Phase I Option Final Report</a>
+					</p>
+				</div>
+			</div>
+			<div class="row mt-6">
+				<div class="col-xs-12 col-sm-3">
+					<h1 class="text-center">Funding</h1>
+				</div>
+				<div class="col-xs-12 col-sm-9">
+					<p class="lead-align">
+						This project was funded by <a href="https://www.sbir.gov/node/872895" target="_blank"> SBIR A15-055 Phase I</a>.
+					</p>
+				</div>
 			</div>
 
 			<div class="row mt-6">
