--- a/dose.html
+++ b/dose.html
@@ -56,7 +56,9 @@
 
 			<div class="row">
 				<p class="lead">
-					A modified 3D U-Net based deep learning model was developed and trained with segmented head CTs from the <a href="https://competitions.codalab.org/competitions/23428" target="_blank"> OpenKBP - 2020 AAPM Grand Challenge </a>. Relatively low errors in the predicted 3D radiation dose distributions were observed.
+					A modified 3D U-Net based deep learning model was developed and trained with segmented head CTs from the <a href="https://competitions.codalab.org/competitions/23428" target="_blank"> OpenKBP - 2020 AAPM Grand Challenge </a>. 
+					Relatively low errors in the predicted 3D radiation dose distributions were observed.
+					Results of the competition are published <a href="https://pubmed.ncbi.nlm.nih.gov/36093921/" target="_blank"> here </a>. 
 				</p>
 				<br>
 			</div>
@@ -99,6 +101,26 @@
 					    <td>   -8.02 Gy</td>
 					</tr>
 				</table>
+			</div>
+
+			<div class="row mt-6">
+				<h1 class="text-left">Publications</h1>
+			</div>
+			<div class="row">
+				<p class="lead">
+					<a href="https://pubmed.ncbi.nlm.nih.gov/36093921/" target="_blank"> Babier, A., Zhang, B., …, Sun, K., et al. 
+						“OpenKBP-Opt: An international and reproducible evaluation of 76 knowledge-based planning pipelines”, 
+						Physics in Medicine and Biology, 2022 67 185012.
+					</a>
+				</p>
+			</div>
+			<div class="row mt-6">
+				<h1 class="text-left">Patents</h1>
+			</div>
+			<div class="row">
+				<p class="lead">
+					<a href="https://patents.google.com/patent/US20220203124A1/en" target="_blank"> U.S Patent 2022/0203124 A1: “Planning apparatus for planning a radiation therapy”, June 30, 2022</a>.
+				</p>
 			</div>
 
 			<div class="row mt-6">
