update images. add iot.

--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
 						<img class="home-illu" src="images/predictive_link_transparent.png" alt="predictive_link">
 					</a>
 				</div>
+				<div class="col-xs-12 col-sm-4 iot-shade">
+					<a class="no-underline-hover" href="iot.html">
+						<img class="home-illu" src="images/iot_link_transparent.png" alt="iot_link">
+					</a>
+				</div>
 			</div>
 			<div class="row text-center sandbox-shade">
 				<a class="no-underline-hover" href="sandbox/sandbox.html" target="_blank">
