add toxcity outcome prediction pic. update headers.

--- a/examgroup.html
+++ b/examgroup.html
@@ -56,7 +56,7 @@
 					<br>	
 
 					<img class="home-illu" src="images/CNN.png" alt="CNN-classify">
-					<p class="labelthin"> Convolutional neural network for exam group classification of MR images </p>	
+					<p class="labelthin text-center"> Convolutional neural network for exam group classification of MR images </p>	
 				</div>
 			</div>
 		</div>
