--- a/iot.html
+++ b/iot.html
@@ -72,7 +72,7 @@
 					<br>	
 
 					<img class="home-illu" src="images/IoT_gateway_prototype.png" alt="digital-iot">
-					<p class="labelthin"> Architecture design to a IoT gateway solution for a medical device </p>	
+					<p class="labelthin text-center"> Architecture design to a IoT gateway solution for a medical device </p>	
 				</div>
 			</div>
 		</div>
