--- a/nerve.html
+++ b/nerve.html
@@ -75,7 +75,7 @@
 					<div class="col-xs-6">
 						<img class="home-illu" src="images/nerve-segment-B.gif" alt="nerve-segment-B">
 					</div>
-					<p class="labelthin"> Contours of nerves (<span class="red-text">in red</span>) from ultrasound images predicted using deep learning.</p>	
+					<p class="labelthin text-center"> Contours of nerves (<span class="red-text">in red</span>) from ultrasound images predicted using deep learning.</p>	
 
 				</div>
 			</div>
