--- a/praesus.html
+++ b/praesus.html
@@ -56,7 +56,7 @@
 					<br>	
 
 					<img class="home-illu" src="images/medium_mask_labled.png" alt="Rivus-CFUs">
-					<p class="labelthin"> Respirator size prediction based on bizgomatic breadth and menton sellion length of facial mesh </p>	
+					<p class="labelthin text-center"> Respirator size prediction based on bizgomatic breadth and menton sellion length of facial mesh </p>	
 				</div>
 			</div>
 		</div>
