--- a/rivus.html
+++ b/rivus.html
@@ -64,10 +64,10 @@
 					  Your browser does not support the video tag.
 					</video>
 					<!--script> document.getElementById('videoInsert').play(); </script-->
-					<p class="labelthin"> Real-time 3D Human Body Generation </p>
+					<p class="labelthin text-center"> Real-time 3D Human Body Generation </p>
 					<br>
 					<img class="home-illu" src="images/female-android.png" alt="Rivus-Android">
-					<p class="labelthin"> 3D Human Body Generation on Android </p>
+					<p class="labelthin text-center"> 3D Human Body Generation on Android </p>
 				
 					<br>	
 					<p class="lead">
@@ -75,11 +75,11 @@
 					</p>
 					<br>
 					<img class="home-illu" src="images/burn_demarcation.png" alt="Rivus-Demarcate">
-					<p class="labelthin"> Burn Area Demarcation and Calculations </p>
+					<p class="labelthin text-center"> Burn Area Demarcation and Calculations </p>
 
 					<br>
 					<img class="home-illu" src="images/burn_CFUs.png" alt="Rivus-CFUs">
-					<p class="labelthin"> Cutaneous Functional Units </p>
+					<p class="labelthin text-center"> Cutaneous Functional Units </p>
 
 					<br>	
 					<p class="lead">
@@ -87,7 +87,7 @@
 					</p>
 					<br>
 					<img class="home-illu" src="images/image_assist_calculate_plus.png" alt="Rivus-Demarcate">
-					<p class="labelthin"> Image-Assist Burn Demarcation </p>
+					<p class="labelthin text-center"> Image-Assist Burn Demarcation </p>
 
 				</div>
 			</div>
