--- a/segment.html
+++ b/segment.html
@@ -51,10 +51,8 @@
 					The segmentation predictions are also fully automated, fast (in seconds) and require no user intervention.
 				</p>
 				<br>
-				<p class="lead labelbold text-center">
-					3D U-Net Architecture
-				</p>
 				<img class="home-illu" src="images/3D-Unet.png" alt="3D-Unet">
+				<p class="labelthin text-center"> 3D U-Net architecture </p>
 			</div>
 
 			<div class="row mt-6">
