--- a/ocellus.html
+++ b/ocellus.html
@@ -62,7 +62,7 @@
 			</div>
 
 			<div class="row">
-				<p class="lead labelbold">
+				<p class="lead labelbold text-center">
 					High-fidelity 2D Ocular Model
 				</p>
 			</div>
