--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 		<div class="container-narrow">
 			<h1 class="text-center">Who We Are</h1>
 			<div class="text-center mt-5">
-				<a href="https://www.linkedin.com/in/kaysunphd" target="_blank">
+				<!--a href="https://www.linkedin.com/in/kaysunphd" target="_blank"-->
 					<img src="images/me.png" width="20%" height="20%" alt="Kay Sun, Ph.D.">
 				<!--<a class="hero-link" href="/" target="_blank">
 					<span class="octicon octicon-eye">
@@ -190,7 +190,7 @@
 					<img class="img-partner" src="images/Philips_logo_new.png" alt="fda" height="200px">
 				</div>
 				<div class="col-xs-12 col-sm-4">
-					<!-- <img class="img-partner" src="images/Avanos_Logo.png" alt="fda" width="200px"> -->
+					<img class="img-partner" src="images/avanos.jpg" alt="fda" height="200px">
 				</div>
 			</div>
 		</div>
