--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@
 					</a>
 				</div>
 			</div>
+			<div class="row text-center">
+				<div class="col-xs-12 col-sm-4 mlops-shade">
+					<a class="no-underline-hover" href="mlops.html">
+						<img class="home-illu" src="images/mlops_link_transparent.png" alt="mlops_link">
+					</a>
+				</div>
+			</div>
 			<div class="row text-center sandbox-shade">
 				<a class="no-underline-hover" href="sandbox/sandbox.html" target="_blank">
 					<img class="home-illu mt-4 mb-4" src="images/sandbox2.png" alt="sandbox_link">
