--- a/iot.html
+++ b/iot.html
@@ -45,7 +45,11 @@
 						Data captured can be used to perform realtime data analytics to monitor patient health by tracking patient disease and therapies, as well as device health by monitoring the performance of the devices, tracking device fault/alarm trends and even root cause analyses using the data collected. 
 						The data can also be used to develop AI models to make predictions on patient outcome, identify optimum parameters and even make recommendations for personalized treatments.
 					</p>
+					<br>
 				</div>
+				<img class="home-illu" src="images/value_add_IoT_cloud_data.png" alt="value-digital-iot-data">
+				<p class="labelthin text-center"> Ecosystem where data from medtech devices is pushed to cloud platform where they are hosted, accessed and visualized in real-time and perform real-time AI predictions </p>	
+
 			</div>
 			<div class="row mt-6">
 				<div class="col-xs-12 col-sm-3">
@@ -70,10 +74,10 @@
 						Furthermore, role-based acess control and dynamic masking can be implemented to ensure patient privacy and comply with privacy laws.
 					</p>
 					<br>	
-
-					<img class="home-illu" src="images/IoT_gateway_prototype.png" alt="digital-iot">
-					<p class="labelthin text-center"> Architecture design to a IoT gateway solution for a medical device </p>	
 				</div>
+
+				<img class="home-illu" src="images/IoT_gateway_prototype.png" alt="digital-iot">
+				<p class="labelthin text-center"> Architecture design to a IoT gateway solution for a medical device </p>	
 			</div>
 		</div>
 	</section>
