--- a/mlops.html
+++ b/mlops.html
@@ -82,17 +82,19 @@
 						<li>Model deployment tools with SageMaker and Azure or inhouse with Docker and Kubernetes.</li>
 						<li>Feature stores from AWS and even cloud databases to store offline and online features, model registries from AWS and Azure, along with the models metadata like all the algorithms, hyperparameters, and such.</li>
 						<li>Workflow orchestrated and automated with Apache Airflow, and Pipelines.</li>
-					
+					</ul>
+				</p>	
+				<p class="lead">
 					Despite the availability of many solutions, there is still the need to know how to configure and connect these components.
 				</p>
-
+				<br>
 				<img class="home-illu" src="images/component_MLOps.png" alt="component_MLOps">
 				<p class="labelthin text-center"> Component of MLOps </p>
 				<br>
 
 				<p class="lead">
 					Building with these components results in end-to-end MLOps.
-					<ol type="1">
+					<ol type="1" class="lead">
 						<li>Starting with the ML project initiation by framing the business problem and determining the data requirements.</li>
 						<li>Data is ingested from source data and extracted to get the pieces of data needed, data transformation and feature engineering to get the data into the needed form for storage into the feature store for offline model training.</li>
 						<li>Features are used in ML training, after data exploration and data preparation by splitting, kfolds and normalization like standard scaling or minmax.
@@ -104,7 +106,7 @@
 								<li>Monitor functional performance in terms of data drifts and also operational performance in terms of infrastructure health e.g. I/O disk, memory/disk/CPU/GPU utilization, network/inference latency, failed requests.
 									However, monitoring can only detect the problem.</li>
 								<li>Need observability to solve the problem by understanding the state of ML system by looking at historical outputs like metrics, traces, logs, data (features and targets).</li>
-						</ol>
+							</ol>
 					</ol>
 
 				</p>
