add whoweare update news - coursera

--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
 				<a class="site-header-nav-item" href="index.html#what-we-created">Solutions</a>
 				<a class="site-header-nav-item" href="news.html">News</a>
 				<a class="site-header-nav-item" href="contact.html">Contact</a>
+				<a class="site-header-nav-item" href="whoweare.html">Who We Are</a>
 			</nav>
 		</div>
 	</header>
@@ -38,9 +39,9 @@
 		<div class="container-narrow">		
 			<div class="row mt-4">
 				<div class="col-xs-12 col-sm-3">
-					<a href="https://www.linkedin.com/in/kay-sun-22164411" target="_blank">
+					<!--a href="https://www.linkedin.com/in/kay-sun-22164411" target="_blank">
 						<img class="home-illu imgcenter" src="images/LinkedIn-48.png" align="right" alt="kaysun-linkedin">
-					</a>
+					</a-->
 				</div>	
 				<div class="col-xs-12 col-sm-9">				
 					<p class="labelthin-bold text-left no-bottom-pad mb-0">
@@ -64,6 +65,7 @@
 				<a class="footer-nav-item" href="index.html#what-we-created">Solutions</a>
 				<a class="footer-nav-item" href="news.html">News</a>
 				<a class="footer-nav-item" href="contact.html">Contact</a>
+				<a class="footer-nav-item" href="whoweare.html">Who We Are</a>
 			</nav>
 		</div>
 	</foot>
