--- a/dose.html
+++ b/dose.html
@@ -23,6 +23,7 @@
 				<a class="site-header-nav-item" href="index.html#what-we-created">Solutions</a>
 				<a class="site-header-nav-item" href="news.html">News</a>
 				<a class="site-header-nav-item" href="contact.html">Contact</a>
+				<a class="site-header-nav-item" href="whoweare.html">Who We Are</a>
 			</nav>
 		</div>
 	</header>
@@ -153,6 +154,7 @@
 				<a class="footer-nav-item" href="index.html#what-we-created">Solutions</a>
 				<a class="footer-nav-item" href="news.html">News</a>
 				<a class="footer-nav-item" href="contact.html">Contact</a>
+				<a class="footer-nav-item" href="whoweare.html">Who We Are</a>
 			</nav>
 		</div>
 	</foot>
