--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
 				<a class="site-header-nav-item" href="index.html#what-we-created">Solutions</a>
 				<a class="site-header-nav-item" href="news.html">News</a>
 				<a class="site-header-nav-item" href="contact.html">Contact</a>
+				<a class="site-header-nav-item" href="whoweare.html">Who We Are</a>
 			</nav>
 		</div>
 	</header>
@@ -33,6 +34,41 @@
 			</div>
 		</div>
 	</div>
+
+	<section class="page-section page-section-spacious mb-4 mt-4">
+		<div class="container-narrow">	
+			<ul class="blog-index">
+				<li class="mb-4 mb-md-6 mb-lg-8">
+					<h2> Ranked 99<sup>th</sup> Percentile in Coursera's Data Science Coding Challenge: Load Default Prediction
+						<div class="who-when mt-1">
+							<time class="blog-index-time"> August 29, 2023 to August 31, 2023</time>
+						</div>
+					</h2>
+					<p class="lead mt-4">
+						Participated in Coursera's Data Science Coding Challenge to build a machine learning model to predict which individuals are at the highest risk of defaulting on their loan payments based on historical data of previous loans and their default rates.
+						Typical data obtained during loan applications are provided, including age, income, loan amount, credit score, interest rate, loan term, employment type, co-signer, etc.
+						The competition was held from August 29 to 31, 2023.
+					</p>
+					<p class="lead mt-4">
+						Participants were provided training datatset that contains default as a binary target outcome for training and validating, as well as a test dataset, without the default outcome.
+						The predicted default outcomes for the test dataset was compared to the known ground truth hidden to the participants and automatically graded based on AUC metric when the predictions were uploaded to Coursera's servers.
+					</p>
+					<p class="lead mt-4">
+						My ensemble, hyperparameter tuned machine learning model built using AutoGluon, Pandas, Numpy and scikit-learn ranked 99<sup>th</sup> percentile with AUC score of 76.13% while median score amongst the 2,064 particpants (as of December 1, 2023) was 52.85%.
+					</p>
+					
+					<img class="imgcenter" src="images/coursera_loan_default_rank.png" alt="coursera_loan_default_rank">
+
+
+					<p class="lead mt-4">
+						<a href="https://www.coursera.org/projects/data-science-coding-challenge-loan-default-prediction" target="_blank"> Coursera's Data Science Coding Challenge: Loan Default Prediction</a>
+					</p>
+				</li>
+			</ul>	
+		</div>
+	</section>
+
+	<hr>
 
 	<section class="page-section page-section-spacious mb-4 mt-4">
 		<div class="container-narrow">	
@@ -151,6 +187,7 @@
 				<a class="footer-nav-item" href="index.html#what-we-created">Solutions</a>
 				<a class="footer-nav-item" href="news.html">News</a>
 				<a class="footer-nav-item" href="contact.html">Contact</a>
+				<a class="footer-nav-item" href="whoweare.html">Who We Are</a>
 			</nav>
 		</div>
 	</foot>
