--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 				<a class="site-header-nav-item" href="#what-we-created">Solutions</a>
 				<a class="site-header-nav-item" href="news.html">News</a>
 				<a class="site-header-nav-item" href="contact.html">Contact</a>
+				<a class="site-header-nav-item" href="whoweare.html">Who We Are</a>
 			</nav>
 		</div>
 	</header>
@@ -30,7 +31,7 @@
 	<div class="jumbotron jumbotron-shade text-center">
 		<div class="container">
 				<img class="home-illu" src="images/personalized_small.png" alt="personalized">
-			<p class="jumbotron-lead">We build cross-platform medical solutions<br>
+			<p class="jumbotron-lead">We build cross-platform data, cloud and AI solutions<br>
 				<!--<span class="jumbotron-lead-muted"> for medical solutions</span>-->
 			</p>
 		</div>
@@ -40,7 +41,7 @@
 		<div class="container-narrow">
 			<h1 class="text-center">What We Have Created</h1>
 			<p class="lead text-center">
-				Our portfolio of some recent works highlights our deep learning, biophysics modeling, programming and design experiences where we build strategic solutions to diverse problems.
+				Our portfolio of some recent works highlights our data science, machine learning, deep learning, computational modeling, software development and design experiences where we build strategic solutions to diverse problems.
 			</p>
     		<div class="row text-center mt-6">
 				<div class="col-xs-12 col-sm-4 rivus-shade">
@@ -158,7 +159,7 @@
 		<div class="container-narrow">
 			<h1 class="text-center">Who We Are</h1>
 			<div class="text-center mt-5">
-				<!--a href="https://www.linkedin.com/in/kaysunphd" target="_blank"-->
+				<a href="whoweare.html">
 					<img src="images/me.png" width="20%" height="20%" alt="Kay Sun, Ph.D.">
 				<!--<a class="hero-link" href="/" target="_blank">
 					<span class="octicon octicon-eye">
@@ -166,7 +167,7 @@
 				</a>-->
 				</a>
 				<p class="labelbold"> Kay Sun </p>
-				<p class="labelthin mt-0"> Project Lead </p>
+				<p class="labelthin mt-0"> Principal Lead </p>
 			</div>
 		</div>
 	</section>
@@ -224,6 +225,7 @@
 				<a class="footer-nav-item" href="#what-we-created">Solutions</a>
 				<a class="footer-nav-item" href="news.html">News</a>
 				<a class="footer-nav-item" href="contact.html">Contact</a>
+				<a class="footer-nav-item" href="whoweare.html">Who We Are</a>
 			</nav>
 		</div>
 	</foot>
